<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_gray"
    tools:context=".Activity.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/register" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="?actionBarSize"
        android:src="@drawable/arrow_back"
        app:tint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAdd"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/add_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/person_username"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/login_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/login_passwd"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/signup"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:elevation="10dp" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/member"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>